# odin

./: .gitignore  CLAUDE.md  LICENSE  PROTOCOL.md  README.md  pyproject.toml
.claude/: settings.local.json
cpp/: odin.hpp
examples/: README.md  context_manager.py  demo2.py  demo3.py  demo4.py  demo5.py  messages.py  multiple_reporters.py  no_server.py  open_ended.py  shell_demo.sh  shell_reporting.sh  simple_loop.py  startserver.sh
examples/cpp/: Makefile  error_handling.cpp  reporter_demo.cpp  simple_loop.cpp
src/odin/: __init__.py  cli.py  reporter.py  server.py  viewer.py
src/odin/static/: index.html
tests/: test_reporter.py
